@@ -1,5 +1,14 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	(&variable_conditions): Don't include `FALSE' in the result.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&variable_conditions_reduce): FALSE is absorbent.
+	(&variable_conditions): Don't include `FALSE' in the result.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* tests/defs, tests/depend3.test: Remove useless code.
 
 2001-04-09  Akim Demaille  <akim@epita.fr>
